Update the styles and readme - match the text in internation-specs (bp-i18n-specdev) with local edits   as needed (mainly to link to specdev) - update the color to brown - relax the "no spacing" requirement - fix a bug in the document's index

--- a/src/base.css
+++ b/src/base.css
@@ -1366,12 +1366,16 @@ Possible extra rowspan handling
 
 /** Character examples (from the I18N template) *******************************/
 .codepoint bdi {
-   font-size: 120%;
+    line-height: 1em;
+    font-size: 120%;
+    margin-inline: 0.25em;
 }
 
 .uname {
-	text-transform: uppercase;
-	font-variant: all-small-caps;
+    font-family: Arial, monospace;
+	font-size: 85%;
+	letter-spacing: 0.03em;
+	color: brown;
 }
 
 /** Outdated warning **********************************************************/
